--- a/app/views/list.scala.html
+++ b/app/views/list.scala.html
@@ -7,6 +7,21 @@
   <a href="@routes.Managers.newMessage(chanvai)" class="btn btn-primary">Gửi thông báo</a></br></br>
   
   <div id="pagination" class="pagination">
+     <script>
+      function del(urlToDelete) {
+	  var x = confirm("Bạn chắc chắn muốn xóa?");
+	  if(x){
+      $.ajax({
+      url: urlToDelete,
+      type: 'DELETE',
+      success: function(results) {
+      // Refresh the page
+      location.reload();
+      }
+      });
+	  } else return false;
+      }
+      </script>
    @if(currentPage.hasPrev) {
       <li>
          <a href="@routes.Managers.list(currentPage.getPageIndex - 1,chanvai)">
@@ -26,6 +41,7 @@
    } else {
      <li class="disabled"><a>&rarr;</a></li>
    }
+
 </div>
 
   <table class="table table-striped">
@@ -38,16 +54,17 @@
       </tr>
     </thead>
     <tbody>
-    @for(account <- currentPage.getList()) {
+    @for(account <- currentPage.getList()){
       <tr>
         <td><a href="@routes.Managers.show(chanvai,account)">@account.email</a></td>
         <td><a href="@routes.Managers.show(chanvai,account)">@account.password</a></td>
         <td><a href="@routes.Managers.show(chanvai,account)">@account.description</a></td>
+		<td><a onclick="del('@routes.Managers.delete(account.email, chanvai)')"><span class="glyphicon glyphicon-trash"></span></a></td>	  
       </tr>
-    }
-    </tbody>
+}
+</tbody>
   </table>
- 
   <a href="@routes.Managers.newAccount(chanvai)" class="btn btn-primary">New Account</a>
   <a class="btn" href="@routes.Managers.details(chanvai)">BACK</a>
-}
+  <br><center><span class="glyphicon glyphicon-home" aria-hidden="true"></span><a href="@routes.Managers.details(chanvai)">TRANG CHỦ</a><span class="glyphicon glyphicon-home" aria-hidden="true"></span></center>
+ }
