--- a/app/views/sv_detai_detail.scala.html
+++ b/app/views/sv_detai_detail.scala.html
@@ -26,7 +26,6 @@
      <li class="disabled"><a>&rarr;</a></li>
    }
 </div>
-
   <table class="table table-striped">
     <thead>
       <tr>
@@ -46,7 +45,7 @@
     }
     </tbody>
   </table>
- 
   <a href="@routes.Managers.newAccount(chanvai)" class="btn btn-primary">New Account</a>
   <a class="btn" href="@routes.Managers.details(chanvai)">BACK</a>
-}
+  <br><center><span class="glyphicon glyphicon-home" aria-hidden="true"></span><a href="@routes.Managers.details(chanvai)">TRANG CHỦ</a><span class="glyphicon glyphicon-home" aria-hidden="true"></span></center>
+ }
