--- a/app/views/svdetails.scala.html
+++ b/app/views/svdetails.scala.html
@@ -9,4 +9,5 @@
 			} else {
       			<p>Báo cáo tiến độ</p> 
 			}</a></br>
+			<br><center><span class="glyphicon glyphicon-home" aria-hidden="true"></span><a href="@routes.Students.details(account)">TRANG CHỦ</a><span class="glyphicon glyphicon-home" aria-hidden="true"></span></center>
 }
