+)thêm các thông tin : sdt , date, chức danh , nơi công tác cho giảng… … viên, học viên +)edit lại phần delete( name --> email) +)edit giao diện web - trang chủ bắt mắt hơn +)thêm phần hiển thị những thông tin thêm cho giáo vụ,

--- a/app/views/gvshow.scala.html
+++ b/app/views/gvshow.scala.html
@@ -12,7 +12,11 @@
    <fieldset>
       <legend>Tài khoản @userForm("name").valueOr("New")</legend>
 
-      @helper.textarea(userForm("description"), '_label -> "THÔNG TIN CHUNG")
+     @helper.inputText(userForm("date"), '_label -> "BIRTHDAY")
+      @helper.inputText(userForm("sdt"), '_label -> "SỐ ĐIỆN THOẠI")
+      @helper.inputText(userForm("chucdanh"), '_label -> "CHỨC DANH (TS, PGS, GS,...ThS.....)")
+      @helper.inputText(userForm("noicongtac"), '_label -> "NƠI CÔNG TÁC")
+      @helper.textarea(userForm("description"), '_label -> "THÔNG TIN THÊM")
     </fieldset>
     <input type="submit" class="btn btn-primary" value="Save">
   }
