--- a/app/views/svshow.scala.html
+++ b/app/views/svshow.scala.html
@@ -11,6 +11,8 @@
     <fieldset>
        <legend>Tài khoản @userForm("name").valueOr("New")</legend>
 	   @helper.inputText(userForm("name"), '_label -> "TÊN")
+	    @helper.inputText(userForm("date"), '_label -> "Date")
+       @helper.inputText(userForm("sdt"), '_label -> "SỐ ĐIỆN THOẠI")
        @helper.textarea(userForm("description"), '_label -> "THÔNG TIN CHUNG")
     </fieldset>
     <input type="submit" class="btn btn-primary" value="Save">
