--- a/app/views/list.scala.html
+++ b/app/views/list.scala.html
@@ -7,6 +7,29 @@
   <a href="@routes.Managers.newMessage(chanvai)" class="btn btn-primary">Gửi thông báo</a></br></br>
   
   <div id="pagination" class="pagination">
+    <script type="text/javascript">
+   $(document).ready(function() {
+    $(".element span").text(function(index, text) {
+    return text.replace('3', 'Giáo vụ');
+    });
+    });
+
+    </script>
+    <script type="text/javascript">
+    $(document).ready(function() {
+    $(".element span").text(function(index, text) {
+    return text.replace('2', 'Giảng viên');
+    });
+    });
+    </script>
+
+    <script type="text/javascript">
+    $(document).ready(function() {
+    $(".element span").text(function(index, text) {
+    return text.replace('1', 'Học viên');
+    });
+    });
+    </script>
      <script>
       function del(urlToDelete) {
 	  var x = confirm("Bạn chắc chắn muốn xóa?");
@@ -49,8 +72,15 @@
       <tr>
         <th>Tài khoản</th>
         <th>Mật khẩu</th>
-        <th>Description</th>
-        <th> </th>
+        <th>Họ tên</th>
+          <th>Quyền hạn, chức vụ</th>
+          <th>Số điện thoại</th>
+          <th>Chức danh</th>
+          <th>Nơi công tác</th>
+
+          <th>Thông tin thêm</th>
+
+        <th>Edit || Delete</th>
       </tr>
     </thead>
     <tbody>
@@ -58,8 +88,13 @@
       <tr>
         <td><a href="@routes.Managers.show(chanvai,account)">@account.email</a></td>
         <td><a href="@routes.Managers.show(chanvai,account)">@account.password</a></td>
-        <td><a href="@routes.Managers.show(chanvai,account)">@account.description</a></td>
-		<td><a onclick="del('@routes.Managers.delete(account.email, chanvai)')"><span class="glyphicon glyphicon-trash"></span></a></td>	  
+        <td><a href="@routes.Managers.show(chanvai,account)">@account.name</a></td>
+          <td class="element"><span><a href="@routes.Managers.show(chanvai,account)">@account.tag.id</a></span></td>
+          <td>@account.sdt</td>
+          <td>@account.chucdanh</td>
+          <td>@account.noicongtac</td>
+        <td>@account.description</td>
+		<td> <a href="@routes.Managers.show(chanvai,account)" class="glyphicon glyphicon-edit"> <span class="icon icon-pencil"> </span></a> || <a onclick="del('@routes.Managers.delete(account.email, chanvai)')"><span class="glyphicon glyphicon-trash"></span></a></td>	  
       </tr>
 }
 </tbody>
