--- a/app/views/details.scala.html
+++ b/app/views/details.scala.html
@@ -44,6 +44,6 @@
  </div>
     <input type="submit" class="btn btn-primary" value="Save">
     <a class="btn" href="@routes.Managers.details(name)">Cancel</a>
-	<br><center> <span class="glyphicon glyphicon-home" aria-hidden="true"></span><a href="@routes.Managers.details(name)"> TRANG CHỦ </a
+	<br><center> <span class="glyphicon glyphicon-home" aria-hidden="true"></span><a href="@routes.Managers.details(name)"> TRANG CHỦ </a><span class="glyphicon glyphicon-home" aria-hidden="true"></span></center>
   }
 }
